--- a/git-on-mac-road/git-to macDocument/gitmacMain.tex
+++ b/git-on-mac-road/git-to macDocument/gitmacMain.tex
@@ -14,8 +14,11 @@
 
 \newcommand{\userThree}{\texttt{user3}}
 
+\newcommand{\userX}{\texttt{userX}}
+
 \newcommand{\gitG}{\texttt{gitgroup}}
 
+\newcommand{\homebrew} {\lstinline{homebrew}}
 
 
 
@@ -45,7 +48,7 @@ Ce document est nécessaire car, les informations pour faire l'installation sont
 \centering
 \includegraphics[scale=0.40]{images/git.png}
 \caption{\git{}}
-\end{figure} \label{fig:git}
+\end{figure} \label{fig:gitorg}
   
 Le requis est d'être le plus secure possible. Donc, le protocole à utiliser est le \lstinline{ssh://}, et un tunnel \lstinline{ssh}.
 
@@ -66,15 +69,15 @@ L’utilisation de \lstinline{ssh} pour accéder aux dépôts Git distants renfo
 
 \input{orga}
 
-%\input{users}
+\input{users}
 
-%\input{ssh}
+\input{ssh}
 
-%\input{tunnelssh}
+\input{tunnelssh}
 
-%\input{git}
+\input{git}
 
-%\input{debug}
+\input{gitEclipse}
 
 %\input{workGit}
 
