--- a/git-on-mac-road/git-to macDocument/ssh.tex
+++ b/git-on-mac-road/git-to macDocument/ssh.tex
@@ -220,7 +220,7 @@ SSH fonctionne ensuite sans interruption
 \subsection{Keychain (macOS Apple)}
 
 \begin{lstlisting}
-ssh-add --apple-use-keychain ~/.ssh/id_ed25519
+ssh-add --apple-use-keychain ~/.ssh/id_userX_key
 \end{lstlisting}
 
 Vérifie :
